SERVER-7534 mongorestore set default w=0 and call getLastError for w>0